<resources>
    <string name="app_name" translatable="false">StarWarsApp</string>
    <string name="app_version">Version 1.0.0</string>
    <string name="base_url" translatable="false">https://swapi.dev/api/</string>
    <string name="alert_dialog_title">Tip</string>
    <string name="alert_dialog_positive_response" translatable="false">OK</string>
    <string name="alert_dialog_msg">If you wanna see some planet details, keep pressed and then release it. Then touch a detail to see the value</string>
    <string name="name_hint">Name</string>
    <string name="height_hint">Height</string>
    <string name="birthday_hint">Birthday</string>
    <string name="gender_hint">Gender</string>
    <string name="position_hint">Position</string>
    <string name="planet_hint">Planet</string>
    <string name="films_hint">Films</string>
    <string name="successful_message">Successful Connection</string>
    <string name="failure_message">Connection Failure: %s</string>
    <string name="tv_result_height">Height: %s cm</string>
    <string name="tv_result_birthday">Birthday: %s</string>
    <string name="tv_result_gender">Gender: %s</string>
    <string name="tv_result_planet_name">Planet\'s Name: %s</string>
    <string name="tv_result_films">Films</string>
    <string name="climate">Climate</string>
    <string name="diameter">Diameter</string>
    <string name="orbital_period">Orbital Period</string>
    <string name="population">Population</string>
    <string name="rotation_period">Rotation Period</string>
    <string name="terrain">Terrain</string>
    <string name="movie_title">Title: %s</string>
    <string name="movie_episode_id">Movie: %d</string>
    <string name="movie_release_date">Date: %s</string>
    <string name="movie_director" translatable="false">Director: %s</string>
    <string name="sw_plus_title" translatable="false">Star Wars: %s</string>
    <string name="appears_in_movie">This character appears in the movie!</string>
    <string name="does_not_appear_in_movie">This character does not appear!</string>
</resources>