<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_sw"
    tools:context=".view.activities.CharacterDetails">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tvName_Details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/short_stack"
                    android:gravity="center_horizontal"
                    android:paddingBottom="10dp"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    tools:text="@string/name_hint" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lavLaugh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:lottie_rawRes="@raw/laugh"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true" />

                <TextView
                    android:id="@+id/tvHeight_Details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/short_stack"
                    android:paddingLeft="15dp"
                    android:paddingTop="15dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:text="@string/height_hint" />

                <TextView
                    android:id="@+id/tvBirthday_Details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/short_stack"
                    android:paddingLeft="15dp"
                    android:paddingTop="15dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:text="@string/birthday_hint" />

                <TextView
                    android:id="@+id/tvGender_Details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/short_stack"
                    android:paddingLeft="15dp"
                    android:paddingTop="15dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:text="@string/gender_hint" />

                <Button
                    android:id="@+id/tvPlanet_Details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/short_stack"
                    android:paddingLeft="15dp"
                    android:paddingTop="15dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:text="@string/planet_hint"
                    android:onClick="onClick"/>

                <TextView
                    android:id="@+id/tvFilms_Details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/short_stack"
                    android:paddingLeft="15dp"
                    android:paddingTop="15dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:text="@string/films_hint" />
            </LinearLayout>
        </ScrollView>

        <ProgressBar
            android:id="@+id/pbConnection"
            style="?android:attr/progressBarStyle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>